# todo_list-authentication

./: .gitignore  Pipfile  README.md  pyproject.toml  wsgi.py
src/: main.py  wsgi.py
src/tests/: test_todo_list_authentication.py
src/todo_list_authentication/: __init__.py  auth.py  models.py  views.py
src/todo_list_authentication/templates/: base.html  home.html  login.html  sign_up.html
