[tool.poetry]
name = "todo_list-authentication"
version = "0.1.0"
description = ""
authors = ["czesky90"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.0"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
